--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
 
         function getValue(){
        
-            //var addsite = document.getElementById("siteUpdate");
-            // var option = document.createElement("option");
-            // option.text = "เลือก Site/กอง/ชื่อ";
-            // addsite.add(option)
+            var addsite = document.getElementById("siteUpdate");
+            var option = document.createElement("option");
+            option.text = "เลือก Site/กอง/ชื่อ";
+            addsite.add(option)
             for(var i=0; i < fullArray.length ; i++){
                 var siteArray = fullArray[i][0];
                 //console.log(siteArray)
