--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
 
     <head>
-    <title>Tel-AOASV002</title>
+    <title>Tel-AOASV002s</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -109,8 +109,9 @@
         <br>
     
         <br><div class="w3-left w3-xxlarge">Site/กอง/ชื่อ:  </div>
-        <div id="loading" style="display: none;"><br>
-            <div class="spinner-border spinner-border-sm text-muted" style="vertical-align:baseline;"></div>
+        <div id="loading" style="display: none;vertical-align: baseline;"><br>
+            <span class="spinner-border spinner-border-sm text-muted" style="vertical-align: baseline;" ></span>
+            <span style="vertical-align: baseline;">Loading...</span>
         </div>
         <select id="siteUpdate" class="w3-white w3-padding-16 w3-large w3-round-large w3-border w3-border-grey " style="width:90%;outline:none;margin-left:5% ;"  onchange="fillInform()">
         <option style="font-weight: bold;" disabled selected>เลือก Site/กอง/ชื่อ</option>
