--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
 
     <head>
-    <title>Tel-AOASV005</title>
+    <title>Tel-AOASV006</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -38,8 +38,8 @@
         <div id="cbmregist" class="w3-container w3-padding-48" style="display:block">
             <div class="w3-center w3-xxlarge" style="font-weight: bold;">เพิ่มเบอร์โทรศัพท์</div><br>
             <div class="w3-center">
-            <button class="w3-button w3-padding-16 w3-round-large w3-xlarge w3-pink w3-hover-light-grey w3-hover-text-blue" onclick="add()" style="outline:none; ">เพิ่ม</button>
-            <button class="w3-button w3-padding-16 w3-round-large w3-xlarge w3-pink w3-hover-light-grey w3-hover-text-blue" onclick="update()" style="outline:none; ">อัพเดท</button>
+            <button class="w3-button w3-padding-16 w3-round-large w3-xlarge w3-hover-light-grey w3-hover-text-blue" onclick="add()" style="outline:none;background-color: #4CAF50; ">เพิ่ม</button>
+            <button class="w3-button w3-padding-16 w3-round-large w3-xlarge w3-hover-light-grey w3-hover-text-blue" onclick="update()" style="outline:none;background-color: #4CAF50 ">อัพเดท</button>
             </div><br>
 
 <!-- ///////////////////////////Add Form//////////////////////////////////// -->
