--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
 
     <head>
-    <title>Tel-AOASV007</title>
+    <title>Tel-AOASV008</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
     </head>
 
     <style>
-    html,body,h1,h2,h3,h4,h5 {font-family: 'Kanit', sans-serif;background-color:LightGray}
+    html,body,h1,h2,h3,h4,h5 {font-family: 'Kanit', sans-serif;background-color:rgb(255, 255, 255)}
     </style>
   
 
