--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Tel-AOASV002</title>
+    <title>Tel-AOASV001</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -430,7 +430,7 @@
         //   await liff.init({ liffId: "1655566430-ap6yZxdvs" })
         // }
 
-        //main();
+        main();
 
     </script>
 </body>
